Scrollbar issue fixed!

--- a/CSS/phase1.css
+++ b/CSS/phase1.css
@@ -20,15 +20,17 @@ body{
   }
   
   .scrollBar::-webkit-scrollbar-thumb {
-    background: #5052f0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #2c1b75, #5052f0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #2c1b75, #5052f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #4b6cb7;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   }
   
   .scrollBar::-webkit-scrollbar-thumb:hover {
-    background: #5052f0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #2c1b75, #5052f0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #2c1b75, #5052f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #4b6cb7;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   }
 
 
